@@ -3777,6 +3777,56 @@ condition|)
 block|{
 if|if
 condition|(
+name|f
+operator|.
+name|getDefaultValue
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|DYNAMIC_FIELD
+operator|+
+literal|" can not have a default value: "
+operator|+
+name|name
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|f
+operator|.
+name|isRequired
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|DYNAMIC_FIELD
+operator|+
+literal|" can not be required: "
+operator|+
+name|name
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
 name|isValidFieldGlob
 argument_list|(
 name|name
