@@ -41,8 +41,8 @@
    <dynamicField name="*_pulsing" type="string_pulsing"  indexed="true" stored="true"/>
    <dynamicField name="*_standard" type="string_standard"  indexed="true" stored="true"/>
 
-   <dynamicField name="*_disk" type="string_disk" indexed="false" stored="false" docValues="true" default="" />
-   <dynamicField name="*_memory" type="string_memory" indexed="false" stored="false" docValues="true" default="" />
+   <dynamicField name="*_disk" type="string_disk" indexed="false" stored="false" docValues="true" />
+   <dynamicField name="*_memory" type="string_memory" indexed="false" stored="false" docValues="true" />
  </fields>
   <defaultSearchField>string_f</defaultSearchField>
  <uniqueKey>string_f</uniqueKey>
