@@ -133,6 +133,29 @@ literal|"_twice"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testSevereErrorsForUnsupportedAttributesOnDynamicField
+specifier|public
+name|void
+name|testSevereErrorsForUnsupportedAttributesOnDynamicField
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|doTest
+argument_list|(
+literal|"bad-schema-dynamicfield-default-val.xml"
+argument_list|,
+literal|"default"
+argument_list|)
+expr_stmt|;
+name|doTest
+argument_list|(
+literal|"bad-schema-dynamicfield-required.xml"
+argument_list|,
+literal|"required"
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testSevereErrorsForDuplicateFieldType
 specifier|public
 name|void
